--- a/posts/2015-11-27.md
+++ b/posts/2015-11-27.md
@@ -6,7 +6,9 @@ This is the second, much delayed, post about differential dataflow. In this post
 
 Since it has been a while, let's recap what is exciting about differential dataflow, and why you might be interested in its implementation. First, differential dataflow allows you to do some pretty neat things, incrementally updating complicated big-data computations in near real-time. The [previous post](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-29.md) explains bread-first search, and how you can you can both perform the computation efficiently, as well as update the computation in microseconds. There is a whole general big-data programming language in which all computations are incrementally updateable.
 
-Not only can you do neat things with differential dataflow, but its implementation is also pretty neat. Although there are all these incremental updates flowing around, the internal state is basically just a bunch of append-only lists. This is pretty cool, because we are able to get fine-grained incremental udates, and still take advantage of the great properties of append-only immutable state (what Joe Hellerstein calls [progressive systems](https://sites.google.com/site/progressive294/)). Issues like fault-tolerance are a lot easier to handle (haven't yet, sorry), as well as some pretty cool examples of state-sharing between operators which depart a bit from "pure" dataflow.
+Not only can you do neat things with differential dataflow, but its implementation is also pretty neat. Although there are all these incremental updates flowing around, the internal state is basically just a bunch of append-only lists. This is pretty cool, because we are able to get fine-grained incremental udates, and still take advantage of the great properties of append-only immutable state (what Joe Hellerstein calls [progressive systems](https://sites.google.com/site/progressive294/)). Issues like fault-tolerance are a lot easier to handle (haven't yet, sorry), as well as some pretty cool examples of state-sharing between operators which depart a bit from "pure" dataflow. 
+
+There are a lot of really cool research opportunities in the implementation of differential dataflow.
 
 --- 
 
@@ -24,7 +26,7 @@ let result = roots.iterate(|dists|
          .map(|(node, dist, next)| (next, dist + 1))
          .concat(&dists)
          .group(|node, ds| ds.min())
-)
+);
 ```
 
 Behind the scenes it is actually turned into a dataflow graph. For example, this program turns into a graph that looks a bit like this:
@@ -34,7 +36,7 @@ Behind the scenes it is actually turned into a dataflow graph. For example, this
 
 Dataflow graphs are pretty helpful in a distributed setting because it allows us to describe the program is way where the execution is mainly data-driven. Each worker knows when it receives some data on one of these edges, it should perform the logic associated with the destination operator. This is often a lot easier than trying to farm out arbitrary bits of computation which might depend on shared state that is also being updated by other workers and who really knows what is going on anyhow. 
 
-One less obvious advantage of this approach is that each of the boxes have names on them. Things like `join` and `map` and `group`. These names are more than just a hunk of code: they describe a functional mapping from the input to the output. In particular, they are going to let us know how we should *update* an output when an input changes.
+One less obvious advantage of this approach is that each of the boxes have names on them. Things like `join` and `map` and `group`. These names are more than just a hunk of code: they describe a functional mapping from the input to the output. This declarative approach to computation not only explains what we should compute the first time around, but it guides us guidance about how to update and re-compute things when their inputs change.
 
 Before talking about how the parts move, we'll want to lay a clear foundation for what the moving parts need to accomplish. 
 
@@ -44,13 +46,17 @@ Our guiding principle will be that our dataflow operators should have a unchangi
 
 This functional relationship just needs to *exist* for now; we'll worry about implementation in a bit.
 
-I should note that functional definitions of computations isn't something new here. However, given the weird and wonderful ways we are going to mess around with inputs to computations, we need to be rock-solid on what each operator should be doing.
+Functional definitions of computations isn't something new here. There are lots of citations and stuff. However, given the weird and wonderful ways we are going to mess around with inputs to computations, we need to be rock-solid on what each of our operators "means".
+
+### Evaluating acyclic dataflow
+
+We aren't go into this all that much, but there are lots of systems out there that can take a big input collections and a directed acyclic dataflow graph of functional operators, and evaluate the dataflow operator at a time. Thinking it out, we can determine what each of the operators should produce as output, look at the next operators, that sort of thing.
 
 ### Sequences of inputs
 
-There are any number of frameworks for applying a data-parallel dataflow to some large set of collections; let's try and step the game up a bit and consider sequences of input collections. That is, Rather than some enormous 1TB input collection, you have a whole bunch of these collections as input. We are eventually going to restrict our attention to situations where there isn't much variation from collection to collection, but it helps to start out generally.
+There are any number of frameworks for applying a data-parallel dataflow to some large set of collections; let's try and step the game up a bit and consider sequences of input collections. That is, Rather than some enormous 1TB input collection, you have a whole bunch of these collections as input. We are eventually going to restrict our attention to situations where there isn't much variation from collection to collection, but it helps to start out generally, to make sure we know what we want to compute.
 
-Because our operators and computation are functional, the sequence of input collections give rise to a sequence of output collections. We know how each of these output collections are defined: application of the functional form of the computation to each of the inputs. We could imagine re-running our computation (however we end up running it) on each of the input collections independently, which would probably be painfully expensive but at least painfully clear about what we should be producing as output. This obviously isn't the most promising way to compute the sequence of outputs.
+Because our operators and computation are functional, the sequence of input collections give rise to a sequence of output collections. We know how each of these output collections are defined: application of the functional form of the computation to each of the inputs. We could imagine re-running our computation (however we end up running it) on each of the input collections independently, which would probably be painfully expensive but at least painfully clear about what we should be producing as output. This isn't obviously the most promising way to compute the sequence of outputs, though.
 
 This is normally the point in a paper where the authors run off in various different directions and explain how they are going to efficiently implement this computation by *incrementalization*. In short, there are lots and lots of ways to exploit the structure of the sequences of inputs: one input comes after another, and we could imagine re-using the result of preceding computations. For example, one could assume that records are only added to the input and operators are logically monotonic (more inputs means more outputs, never fewer); this gives rise to Datalog and CRDTs and stuff. Or, you could assume that the sequence of inputs are really a sliding window (when a record is added, it remains for some fixed number of rounds) and the computation is a DAG. Or a bunch of other things.
 
@@ -66,13 +72,35 @@ Actually it is a sequence of `dists` *for each round*. So, really it is more lik
 
 Lets think about things slightly differently: inputs like `roots` and `edges` go through a sequence of collections, so let's have them be indexable by some integer `i`. The collections `roots[i]` and `edges[i]` indicate the collections in the `i`th element of the sequence. For folks inside the loop, `dists` for example, we'll let it be indexed by both round `i` and iteration `j`: `dists[(i,j)] indicates the collection `dists` in the `j`th iteration of the loop for the computation stated with inputs `roots[i]` and `edges[i]`.
 
-With this framing, sequences are just collections that vary with an integer parameter. Inside a loop, we have collections that vary with a pair of integers. Hey let's just let collections *vary*, and not be so picky about what they vary with. 
+With this framing, sequences are just collections that vary with an integer parameter. Inside a loop, we have collections that vary with a pair of integers. Hey let's just let collections *vary*, and not be so picky about what they vary with just yet. 
 
 We still want to hold on to our core principle, that operators map functional logic across varying inputs. If the inputs are allowed to vary with some parameter (integers, pairs of integers, strings?) then we can clearly define an output collection that varies with the same indices: for any index `t`, let
 
     output[t] = logic(input[t])
 
 It worked out great for sequences, right? 
+
+So, we can take something like `dists` which varies with `(i,j)` and think about
+
+```rust
+dists.join(&edges)
+     .map(|(node, dist, next)| (next, dist + 1))
+     .concat(&dists)
+     .group(|node, ds| ds.min())
+```
+
+which is just another collection that also varies with `(i,j)`. The collection is defined pointwise as (I just put a bunch of `[(i,j)]` in there):
+
+```rust
+dists[(i,j)].join(&edges[(i,j)])
+     .map(|(node, dist, next)| (next, dist + 1))
+     .concat(&dists[(i,j)])
+     .group(|node, ds| ds.min())
+```
+
+Notice how we are talking about just one computation (the four operators above), but run in a variety of contexts on different inputs in different rounds of computation.
+
+This is actually almost what we want in our example, if we could just take this output at `(i,j)` and feed it back to be `dists[(i,j+1)]`. 
 
 ### Adding loops
 
@@ -90,31 +118,33 @@ We've effected an iterative computation by putting a cyclic harness around helpf
 
 ### Recap
 
-Let's take a moment to reflect, and think about whether we've acutally done anything smart yet. We know that we can trivially implement functional operators that generalize over collections that vary in arbitrary weird ways, just by re-running the computation. Given that as our only general implementation so far, the above actually looks like a pretty brain-dead way to evaluate a loop. We just re-run things over and over; thanks.
+Let's take a moment to reflect, and think about whether we've acutally done anything smart yet. 
 
-Remember, we were just trying to define *what* we want to compute. Each operator, primitive and composite, should map some functional logic across its varying inputs. 
+Mostly we've put together some notation. We have collection that vary with indices like `i` or `(i,j)`, and we define new collections that vary with the same indices. Ideally, we've just named a bunch of things we would eventually like to compute. Also, we know that we *could* compute each of these,because each have a super clear functional definition in terms of inputs or other intermediate collections.
+
+Remember, so far we were just trying to define *what* we want to compute. 
 
 ## Differential dataflow
 
-We dug ourselves into a bit of a hole, telling people that they could (and should) write iterative data-parallel computations mapped across multiple terabyte sized inputs, but not really having a great story about how do you do that. 
+We've dug ourselves into a bit of a hole, telling people that they could (and should!) write iterative data-parallel computations mapped across a sequence of terabyte-sized inputs, but not really having a great story about how do you do that. Our best story is: each time you need to do that, just start from scratch and spin up some scalable computation. In our defense, this is basically what thinks like DryadLINQ and Spark propose.
 
 Now we are going to dig ourselves out.
 
 ### Data and operator model
 
-Our collections are going to be multisets over some domain. There is some set of possible elements, think "32 bit integers" or "strings", and for each of them there is a integer count indicating how many times the record occurs in the collection. 
+Our collections are going to be multisets over some domain. There is some set of possible elements, think "32 bit integers", or "strings", or "weird type you just defined (with some restrictions)" and for each of them there is a integer count indicating how many times the record occurs in the collection. 
 
 Each of our operators will be "data-parallel". This means that there is a function from input records to "keys", and the operator acts independently on parts of the input with different keys. Implementation-wise, this will mean that we can partition records by key and independently apply whatever operator logic we have. This is historically used to parallelize the computation, which we'll certainly do. We will also use it to efficiently incrementalize the computation.
 
 ### Incrementalizing sequences
 
-We are going to go beyond sequences, but it will help to start with how we might implement an incremental dataflow operator if we only ever have sequences of inputs.
+We are going to go beyond sequences, but it will help to start with how we might implement an incremental dataflow operator if we only ever have sequences of inputs. Just sequences for now, not beyond-sequences, yet.
 
-If we have a sequence of collections, which are counts for each record, one natural approach would be to work with the differences between the collections: those records with different counts, and the differences in their counts. This way, even if we have terabytes of data, if they don't change too much as we move along the sequence, great! In practice, this means we could write down collections with much finer granularity.
+If we have a sequence of collections, which are counts for each record, one natural approach would be to work with the differences between the collections: those records with different counts, and the differences in their counts. This way, even if we have terabytes of data, if they don't change too much as we move along the sequence, great! In practice, this means we stop worrying so much about how large the input data are, and instead how rapidly they change. 
 
-So let's imagine we only talk in terms of the differences between collections (and starting from a 0-th empty collection). What do we need to do to get operators to properly compute their sequence of outputs? Also, notice that we only need to produce the sequence of output *differences*. We are now working with difference exclusively, and getting the actual outputs isn't on our list of desiderata any more.
+So let's imagine we only talk in terms of the differences between collections (and starting from a 0-th empty collection). What do we need to do to get operators to properly compute their sequence of outputs? Also, note that we only need to produce the sequence of output *differences*. We are now working with difference exclusively, and getting the actual outputs isn't on our list of desiderata any more.
 
-Getting the output differences for data-parallel operators isn't so hard. We know that if a group of records with the same key hasn't changed, its output wont change either. Changes only result from the keys observed in the input differences. We could totally just collect the keys in the input differences, determine the state of each after and before the input update, apply the operator's logic to each, and output their difference.
+Getting the output differences for data-parallel operators isn't so hard. We know that if a group of records with the same key hasn't changed, its output wont change either. Changes only result from the keys observed in the input differences. We could totally just collect the keys in the input differences, determine the state of the input each after and before the update, apply the operator's logic to each, and output their difference.
 
 ### An example: `distinct`
 
@@ -130,9 +160,9 @@ where `...` is a terabyte of animal names that doesn't change in this example.
 
 The corresponding outputs of the `distinct` operator are 
 
-	input_0 = { (cat, 1), (dog, 1), ... }
-	input_1 = { (cat, 1), (dog, 1), ... }
-	input_2 = { (cat, 1), (goat, 1), ... }
+	output_0 = { (cat, 1), (dog, 1), ... }
+	output_1 = { (cat, 1), (dog, 1), ... }
+	output_2 = { (cat, 1), (goat, 1), ... }
 
 If we write down the input *differences*, they are
 
@@ -140,17 +170,26 @@ If we write down the input *differences*, they are
 	d_input_1 = { (cat, 1) }
 	d_input_2 = { (dog, -1), (goat, 1) }
 
-Although we could cheat and see the answers up above, the output differences for each input can be determine just from the records in difference. In the very first round of differences everything changes (up from a count of zero), and we need to actually go and perform our `distinct` logic on it. In the second round only the count for `cat` changes, and we can just reconsider the `distinct` logic before and after the update; no changes required. In the third round the counts for `dog` and `goat` change, from one to zero and zero to one respectively; we reconsider their counts before and after and determine that the output differences should be:
+While we could form each of the outputs and determine the differences, this is expensive. Instead, the output differences for each input can be determined just from the input records in difference. In the very first round of differences everything changes (up from a count of zero), and we need to actually go and perform our `distinct` logic on it. In the second round only the count for `cat` changes, and we can just reconsider the `distinct` logic before and after the update; no changes required. In the third round the counts for `dog` and `goat` change, from one to zero and zero to one respectively; we reconsider their counts before and after and determine that the output differences should be:
 
 	d_output_0 = { (cat, 1), (dog, 1), ... }
 	d_output_1 = { }
 	d_output_2 = { (dog, -1), (goat, 1) }
 
+The important point is that to determine this output, we don't need to pay any attention to the `...` data in anything other than the first round.
+
 This example also makes an interesting point that some times differences just vanish. In the second round ('1'th) there are no output differences, and we can just stop. Subsequent computations will have no input differences, and consequently no output differences.
 
 ### Incrementalizing "beyond-sequences"
 
-Ok, it is now time for grown-up pants. Let's take everything we learned up above and apply it to beyond-sequences. Like, maybe sequences of sequences or strings or something. 
+Ok, it is now time for grown-up pants. 
+
+Let's take everything we learned up above and apply it to beyond-sequences. Like, maybe sequences of sequences or strings or something. Grab some paper and try and figure out the differences for
+
+	input_(0,0) = { (cat, 1), (dog, 1), ... }
+	input_(1,0) = { (cat, 2), (dog, 1), ... }
+	input_(0,1) = { (cat, 1), (goat, 1), ... }
+	input_(1,1) = { (cat, 2), (goat, 1), ... }
 
 Hard, isn't it? What the hell do you subtract, and from what?
 
@@ -170,7 +209,7 @@ Let's rewrite it just a bit. If we solve for `dx[t]` we get
 
 which basically just says: "the difference at `t` should be whatever it takes to make `x[t]` add up right". 
 
-The only remaining degree of freedom, and the last thing to talk about before we start talking implementation, is "which partial order should we use?"
+The only remaining degree of freedom, and the last thing to talk about before we start talking implementation, is "which partial order should we use?" Cause, the partial order you choose determines how you take the differences, and that is important.
 
 ### Partial orders
 
@@ -186,17 +225,33 @@ We'll end up using the "product partial order", where
 
 Each coordinate has to be less-or-equal for the pair to be less or equal. This is pretty convenient, because the only thing we have to do with `t` is compare it to other `t`s using its associated `<=` function. But why is it a good choice? Is it a good choice?
 
-Understanding whether it is actually a good choice or not is a bit of a non-technical question, I think. This choice leads to an interpretation of these differences as higher-order differencing: differences of differences. This leads us to some good feelings when we think about loops: If a change to the input doesn't change the sequence of differences in the loop much, we won't have large differences. This wouldn't be true for other orders, like the lexicograph partial order (order `(t,i)` first by `t` then by `i`). We haven't yet nailed down a brilliant cost model for differential dataflow, but it seems like there is some potential here.
+The example up, with the product partial order, above gets differences that look like
+
+	input_(0,0) = { (cat, 1), (dog, 1), ... }
+	input_(1,0) = { (cat, 2), (dog, 1), ... }
+	input_(0,1) = { (cat, 1), (goat, 1), ... }
+	input_(1,1) = { (cat, 2), (goat, 1), ... }
+
+	d_input_(0,0) = { (cat, 1), (dog, 1), ... }
+	d_input_(1,0) = { (cat, 1) }
+	d_input_(0,1) = { (dog, -1), (goat, 1) }
+	d_input_(1,1) = { }
+
+Understanding whether the product partial order is actually a good choice or not may be a bit of a non-technical question, I think. This choice leads to an interpretation of these differences as higher-order differencing: differences of differences. This leads us to some good feelings when we think about loops: If a change to the input doesn't change the sequence of differences in the loop much, we won't have large differences. This wouldn't be true for other orders, like the lexicographic partial order (order `(t,i)` first by `t` then by `i`). 
+
+We haven't yet nailed down a brilliant cost model for differential dataflow, but it seems like there is some potential here.
 
 ## Operator implementations
 
-Before we have a big party we should make sure that we can efficiently implement our operators to speak in terms of this weird differencing regime. It turns out to be harder than above, but we can totally do it. 
+Before we have a big party we should make sure that we can still work out how to efficiently implement our operators, in terms of this weird differencing regime. It turns out to be harder than above, but we can totally do it. 
 
-Imagine we keep all received input differences and produced output differences. We can now reconstruct an input collection at any `t`, apply the operator logic, and subtract output differences at `t' <= t`. Our operators are still data-parallel, so we can partition up the work by key, and only reconsider our output for pairs `(key, time)` where a change in the input may have occurred. 
+Imagine we keep all received input differences and produced output differences, partitioned up by their associated key. We can reconstruct the input and output associated with a given key at any `t`, subtract from the output the operator logic applied to the input, and produce that as output for `t`.
+
+Ideally, we only need to pay attention to a restricted set of `(key, t)`. When we were working with sequences we could just restrict our attention to the `(key, t)` pairs observed in the input. How do we know which keys and times to work with here? "All of them" would probably work, but at this point you might be worried that "the `(key, t) pairs observed in the input" doesn't work.
 
 ### Interesting times
 
-There is a small subtle detail here, which is that times `t` at which the input part associated with `key` might have changed is *not* just those times at which we observe input differences with `key`. That sound a bit weird, but consider our `distinct` operator from up above with input differences
+There is a small subtle detail here, which is that the times `t` at which the input part associated with `key` might have changed is *not* just those times at which we observe input differences with `key`. That sound a bit weird, but consider our `distinct` operator from up above with input differences
 
     (cat, +1, (0, 3))
     (cat, +1, (1, 2))
@@ -214,9 +269,11 @@ Except, this goes horribly wrong at `(1,3)`, when the two differences both come 
 
 but what happened here?
 
-Despite only seeing differences at `(0,3)` and `(1,2)`, the input collection does experience a change at `(1,3)` when these two input differences both come into effect. It turns out that the set of times we need to consider is the *least upper bound* of any subset of the times at which we received input differences. 
+Despite only seeing differences at `(0,3)` and `(1,2)`, the input collection experiences a change at `(1,3)` when these two input differences both come into effect. It turns out that the set of times we need to consider is the set of times when the input might change. We could find these times by taking any subset of the input times and asking "when do they all first come into effect?"
 
-For the mathematically inclined, this means that our "partial order" talk really should have been ["join semi-lattice"](https://en.wikipedia.org/wiki/Semilattice), which is a partial order where any finite subset of elements have a "least upper bound": an element greater than any member of the set, and less or equal to any elements greater than all elements in the set. We [proved some things](https://users.soe.ucsc.edu/~abadi/Papers/differential_revision-app.pdf) about this being correct and stuff.
+For the mathematically inclined, this means that all of our "partial order" talk really should have been ["join semi-lattice"](https://en.wikipedia.org/wiki/Semilattice), which is a partial order where any finite subset of elements have a "least upper bound": an element greater than any member of the set, and less or equal to any elements greater than all elements in the set. We [proved some things](https://users.soe.ucsc.edu/~abadi/Papers/differential_revision-app.pdf) about this being correct and stuff.
+
+As it turns out, it is sufficient to compare the input and output for `(key, t)` pairs where `t` is the least upper bound of some subset of times at which the input associated with `key` changed. You might worry that there is there is something scary exponential going on here, but (i) nah, you can't have that many without a more complicated partial order, and (ii) it's actually the right answer; the input changes and so the operator could do something totally different.
 
 ### Pseudocode
 
