--- a/posts/2015-11-27.md
+++ b/posts/2015-11-27.md
@@ -34,7 +34,7 @@ Behind the scenes it is actually turned into a dataflow graph. For example, this
 ![BFS dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/differential/dataflow.png)
 
 
-Dataflow graphs are pretty helpful in a distributed setting because it allows us to describe the program is way where the execution is mainly data-driven. Each worker knows when it receives some data on one of these edges, it should perform the logic associated with the destination operator. This is often a lot easier than trying to farm out arbitrary bits of computation which might depend on shared state that is also being updated by other workers and who really knows what is going on anyhow. 
+Dataflow graphs are pretty helpful in a distributed setting because it allows us to describe the program in a way where the execution is mainly data-driven. Each worker knows that when it receives some data on one of these edges, it should perform the logic associated with the destination operator. This is often a lot easier than trying to farm out arbitrary bits of computation which might depend on shared state that is also being updated by other workers and who really knows what is going on anyhow. 
 
 One less obvious advantage of this approach is that each of the boxes have names on them. Things like `join` and `map` and `group`. These names are more than just a hunk of code: they describe a functional mapping from the input to the output. This declarative approach to computation not only explains what we should compute the first time around, but it guides us guidance about how to update and re-compute things when their inputs change.
 
@@ -42,7 +42,7 @@ Before talking about how the parts move, we'll want to lay a clear foundation fo
 
 ## A foundation
 
-Our guiding principle will be that our dataflow operators should have a unchanging *functional* relationship between its inputs and outputs, and that computation will result from changing the operator's inputs (and consequently their outputs). Importantly, this will be true not only for primitive operators like `join` and `group`, but also for composite "operators" like the box containing the iterative computation in the figure above, which we might call the `bfs` operator. Our computational model will build up larger and larger functional blocks, whose inputs we will vary in interesting ways.
+Our guiding principle will be that each of our dataflow operators should have a unchanging *functional* relationship between its inputs and outputs, and that computation will result from changing the operator's inputs (and consequently their outputs). Importantly, this will be true not only for primitive operators like `join` and `group`, but also for composite "operators" like the box containing the iterative computation in the figure above, which we might call the `bfs` operator. Our computational model will build up larger and larger functional blocks, whose inputs we will vary in interesting ways.
 
 This functional relationship just needs to *exist* for now; we'll worry about implementation in a bit.
 
