--- a/posts/2015-11-27.md
+++ b/posts/2015-11-27.md
@@ -70,7 +70,7 @@ Ok but, loops aren't mysterious or anything. Our `iterate` loop above goes throu
 
 Actually it is a sequence of `dists` *for each round*. So, really it is more like a sequence of sequences. Weird.
 
-Lets think about things slightly differently: inputs like `roots` and `edges` go through a sequence of collections, so let's have them be indexable by some integer `i`. The collections `roots[i]` and `edges[i]` indicate the collections in the `i`th element of the sequence. For folks inside the loop, `dists` for example, we'll let it be indexed by both round `i` and iteration `j`: `dists[(i,j)] indicates the collection `dists` in the `j`th iteration of the loop for the computation stated with inputs `roots[i]` and `edges[i]`.
+Lets think about things slightly differently: inputs like `roots` and `edges` go through a sequence of collections, so let's have them be indexable by some integer `i`. The collections `roots[i]` and `edges[i]` indicate the collections in the `i`th element of the sequence. For folks inside the loop, `dists` for example, we'll let it be indexed by both round `i` and iteration `j`: `dists[(i,j)]` indicates the collection `dists` in the `j`th iteration of the loop for the computation stated with inputs `roots[i]` and `edges[i]`.
 
 With this framing, sequences are just collections that vary with an integer parameter. Inside a loop, we have collections that vary with a pair of integers. Hey let's just let collections *vary*, and not be so picky about what they vary with just yet. 
 
